Ajustando o backup e restauração, pois quando dava um build no projeto, o caminho do arquivo do database não estava sendo encontrado